<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.timetabledemo.LoginActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/white"
        android:id="@+id/ToolbarMain">

    </androidx.appcompat.widget.Toolbar>
    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ToolbarMain"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/signin"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="10dp"
        android:background="#D4DFDF"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="Username"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:inputType="text"
        android:layout_margin="10dp"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_below="@id/username"
        android:background="#D4DFDF"
        android:hint="@string/password"
        android:textColorHint="@android:color/black"
        android:textColor="@android:color/black"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="20dp"
        android:autofillHints=""
        android:inputType="textPassword" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn"
        android:layout_below="@id/password"
        android:text="@string/login"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_margin="20dp"/>
    <TextView
        android:id="@+id/forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginbtn"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/forgot_password"
        android:textColor="#D81B60" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/createAccountBtn"
        android:layout_below="@id/forgotpass"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

</RelativeLayout>